Anonymous | Login | 2021-01-26 05:35 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0030942 | Open CASCADE | [OCCT] OCCT:DRAW | public | 2019-09-05 06:59 | 2019-09-07 16:26 | ||||
Reporter | kgv | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | trivial | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 7.3.0 | ||||||||
Target Version | [OCCT] 7.4.0 | Fixed in Version | [OCCT] 7.4.0 | ||||||
Summary | 0030942: Draw Harness, ViewerTest - command vdefaults should abort script on unknown argument | ||||||||
Description | Currently command vdefaults skips unknown arguments with a warning. This is unusual for Draw Harness commands and leads to hidden errors in tests like bugs vis bug25532: > "Warning, unknown argument 'ABSDEFL=1.0'" | ||||||||
Steps To Reproduce | bugs vis bug25532 | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not required | ||||||||
Attached Files | |||||||||
![]() |
|
(0086770) git (administrator) 2019-09-05 07:01 |
Branch CR30942 has been created by kgv. SHA-1: 09c4b323fc844dbef5e25164fa16c17fc3cbf7ac Detailed log of new commits: Author: kgv Date: Thu Sep 5 06:57:33 2019 +0300 0030942: Draw Harness, ViewerTest - command vdefaults should abort script on unknown argument |
(0086778) kgv (developer) 2019-09-05 10:25 |
Please raise the patch. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR30942-master-KGV/ [^] |
(0086813) bugmaster (administrator) 2019-09-05 18:29 |
Combination - OCCT branch : CR30942 master SHA - 09c4b323fc844dbef5e25164fa16c17fc3cbf7ac 5f5b1aed1c6e139bbd34314eca77ae7abcd8895c Products branch : master SHA - 34e9bf11c6b525830b5dee35839707da81e7d1ab was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16175.130000000025 / 16167.270000000033 [+0.05%] Products Total CPU difference: 10483.370000000052 / 10484.930000000048 [-0.01%] Windows-64-VC14: OCCT Total CPU difference: 18246.75 / 18256.515625 [-0.05%] Products --- Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0086932) git (administrator) 2019-09-07 16:26 |
Branch CR30942 has been deleted by inv. SHA-1: 09c4b323fc844dbef5e25164fa16c17fc3cbf7ac |
![]() |
|||
occt: master 14c7f553
Timestamp: 2019-09-05 03:57:33 Author: kgv Committer: bugmaster [ Details ] [ Diff ] |
0030942: Draw Harness, ViewerTest - command vdefaults should abort script on unknown argument | ||
mod - src/ViewerTest/ViewerTest_ViewerCommands.cxx | [ Diff ] [ File ] | ||
mod - tests/bugs/vis/bug25532 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2019-09-05 06:59 | kgv | New Issue | |
2019-09-05 06:59 | kgv | Assigned To | => kgv |
2019-09-05 07:01 | git | Note Added: 0086770 | |
2019-09-05 10:25 | kgv | Note Added: 0086778 | |
2019-09-05 10:25 | kgv | Assigned To | kgv => bugmaster |
2019-09-05 10:25 | kgv | Severity | minor => trivial |
2019-09-05 10:25 | kgv | Status | new => resolved |
2019-09-05 10:25 | kgv | Status | resolved => reviewed |
2019-09-05 18:29 | bugmaster | Note Added: 0086813 | |
2019-09-05 18:29 | bugmaster | Status | reviewed => tested |
2019-09-05 18:29 | bugmaster | Test case number | => Not required |
2019-09-07 11:38 | bugmaster | Changeset attached | => occt master 14c7f553 |
2019-09-07 11:38 | bugmaster | Status | tested => verified |
2019-09-07 11:38 | bugmaster | Resolution | open => fixed |
2019-09-07 16:26 | git | Note Added: 0086932 |
Copyright © 2000 - 2021 MantisBT Team |