0030942: Draw Harness, ViewerTest - command vdefaults should abort script on unknown argument